--- a/ux.html
+++ b/ux.html
@@ -99,7 +99,7 @@
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/SodernArianeGroup/743999692324593-ingenieur-d-etudes-mecaniques-et-thermique-responsable-de-lot-de-travaux-f-h-cdi'>Sodern ArianeGroup INGENIEUR D'ETUDES MECANIQUES ET THERMIQUE / RESPONSABLE DE LOT DE TRAVAUX F/H | CDI | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/SodernArianeGroup/743999692324593-ingenieur-d-etudes-mecaniques-et-thermique-responsable-de-lot-de-travaux-f-h-cdi'>Sodern ArianeGroup INGENIEUR D'ETUDES MECANIQUES ET THERMIQUE / RESPONSABLE DE LOT DE TRAVAUX F/H | CDI | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -131,7 +131,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://kar.wd1.myworkdayjobs.com/en-US/KAR_Careers/job/US---IL---Chicago-DRIVIN/UX-UI-Designer_R-227204?source=BuiltInChicago'>UX/UI Designer</a></h5> 
+<h5><a href='https://kar.wd1.myworkdayjobs.com/en-US/KAR_Careers/job/US---IL---Chicago-DRIVIN/UX-UI-Designer_R-227204?source=BuiltInChicago'>UX/UI Designer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>7 hours ago ... In this role you will focus on multiple facets of the design process including user 
 research, interaction design, data visualization, prototyping, and the production?...</p>
@@ -146,13 +146,13 @@ research, interaction design, data visualization, prototyping, and the productio
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://mekari.recruiterbox.com/jobs/fk03f7q'>
+<h5><a href='http://mekari.recruiterbox.com/jobs/fk03f7q'>
     UX Writer at MEKARI (PT. Mid Solusi Nusantara)
 </a></h5> 
 <p><span class="badge badge-light">Jakarta Jakarta</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='http://revelhealth.applytojob.com/apply/sQHoCxAslQ/Sr-UX-Designer'>Sr. UX Designer - Revel Health - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://revelhealth.applytojob.com/apply/sQHoCxAslQ/Sr-UX-Designer'>Sr. UX Designer - Revel Health - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -177,7 +177,7 @@ research, interaction design, data visualization, prototyping, and the productio
 <p>Jul 18, 2019 ... Project Manager, UX Writing (Contract). San Francisco, CA. Responsibilities: 
 Provides project management expertise for highly complex creative projects,?...</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/efront/41b6338e-ed98-4753-9e76-ad8f288eb953'>eFront - UX Designer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/efront/41b6338e-ed98-4753-9e76-ad8f288eb953'>eFront - UX Designer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -210,7 +210,7 @@ published: 16.07.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/conductor/jobs/1791129'>Job Application for Principal UX & Product Designer at Conductor</a></h5> 
+<h5><a href='https://boards.greenhouse.io/conductor/jobs/1791129'>Job Application for Principal UX & Product Designer at Conductor</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -218,7 +218,7 @@ published: 16.07.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='http://optelgroup.applytojob.com/apply/9myQ285Sv2/Concepteur-UXUI-Designer-UXUI'>Concepteur UX/UI - Designer UX/UI - Optel Group - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://optelgroup.applytojob.com/apply/9myQ285Sv2/Concepteur-UXUI-Designer-UXUI'>Concepteur UX/UI - Designer UX/UI - Optel Group - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -364,7 +364,7 @@ published: 16.07.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light">Seattle Sydney</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/tytConsulting/743999692211731-auxiliar-administrativa-giro-restaurantero'>tyt consulting AUXILIAR ADMINISTRATIVA GIRO RESTAURANTERO | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/tytConsulting/743999692211731-auxiliar-administrativa-giro-restaurantero'>tyt consulting AUXILIAR ADMINISTRATIVA GIRO RESTAURANTERO | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -380,7 +380,7 @@ published: 16.07.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://maisonmoderne.recruiterbox.com/jobs/fk03flh'>
+<h5><a href='http://maisonmoderne.recruiterbox.com/jobs/fk03flh'>
     UI/UX Designer - 1 year contract (W/M) at Maison Moderne
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -402,7 +402,7 @@ published: 16.07.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light">Amsterdam</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/ShopUp/743999692161562-ux-ui-designer'>ShopUp UX/UI Designer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/ShopUp/743999692161562-ux-ui-designer'>ShopUp UX/UI Designer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Dhaka, Bangladesh</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -422,7 +422,7 @@ published: 16.07.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://jobs.crelate.com/portal/clearpoint/job/sfyo6tq94fsmsfaeb5deuta11e/User-Experience-UX-Architect-Washington-DC'>UX Architect | My Crelate Portal</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/clearpoint/job/sfyo6tq94fsmsfaeb5deuta11e/User-Experience-UX-Architect-Washington-DC'>UX Architect | My Crelate Portal</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -445,7 +445,7 @@ published: 16.07.2019). Apply now or check the other available jobs.</p>
 <p>1 day ago ... Are interested in data mining, analytics, and/or machine learning. We're looking 
 for candidates with solid technical foundations and a desire to continue learning.</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Numberly/743999692103855-alternance-stage-administrateur-trice-systemes-gnu-linux'>Numberly Alternance/Stage Administrateur(trice) Syst?mes GNU/LINUX | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Numberly/743999692103855-alternance-stage-administrateur-trice-systemes-gnu-linux'>Numberly Alternance/Stage Administrateur(trice) Syst?mes GNU/LINUX | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
