--- a/business-intelligence.html
+++ b/business-intelligence.html
@@ -46,6 +46,22 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://boards.greenhouse.io/foodspring/jobs/4368617002'>Job Application for Business Intelligence Analyst - Marketing Data Specialist (f/m/d) at foodspring</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-27</p>
+<hr/>
+<h5><a href='https://boards.greenhouse.io/foodspring/jobs/4368618002'>Job Application for Senior Business Intelligence Analyst (f/m/d) at foodspring</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-27</p>
+<hr/>
+<h5><a href='http://jobs.jobvite.com/sega-europe-limited/job/oMLBafw2'>SEGA Europe Limited Careers - Business Intelligence Analyst</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-27</p>
+<hr/>
+<h5><a href='https://activision.referrals.selectminds.com/jobs/business-intelligence-intern-4033'>Business Intelligence Intern -  Activision Careers</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-27</p>
+<hr/>
 <h5><a href='https://boards.greenhouse.io/peak6/jobs/1795447'>Job Application for Business Intelligence and Data Analytics Lead at PEAK6</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
@@ -128,7 +144,7 @@ analyzing and reporting operational and business data from multiple sources.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/cbinsights/jobs/1786391'>Job Application for Business Intelligence Lead at CB Insights</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/cbinsights/jobs/1786391'>Job Application for Business Intelligence Lead at CB Insights</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -161,7 +177,7 @@ Technologies Inc.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/mediacom-na/job/odczafwS'>MediaCom Careers - Manager, Business Intelligence</a></h5> 
+<h5><a href='https://jobs.jobvite.com/mediacom-na/job/odczafwS'>MediaCom Careers - Manager, Business Intelligence</a></h5> 
 <p><span class="badge badge-light">New York New York</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -194,7 +210,7 @@ Media Hungary Kft.</p>
 <p><span class="badge badge-light">Singapore, Singapore</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
-<h5><a href='http://pitchup.applytojob.com/apply/FYplMtOkOi/Business-Intelligence-Analyst'>Business Intelligence Analyst - Pitchup.com - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://pitchup.applytojob.com/apply/FYplMtOkOi/Business-Intelligence-Analyst'>Business Intelligence Analyst - Pitchup.com - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
@@ -230,7 +246,7 @@ developing and implementing metrics and reporting to improve our business and
 <p><span class="badge badge-light">Seattle Seattle San Francisco New York London Mumbai</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/logix/jobs/1782486'>Job Application for Business Intelligence Developer at Logix Federal Credit Union</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/logix/jobs/1782486'>Job Application for Business Intelligence Developer at Logix Federal Credit Union</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -311,7 +327,7 @@ Mavenlink?...</p>
 <p>3 days ago ... ABOUT THE TEAM: Business Science, which encompasses Digital Analytics, is 
 one of the fastest growing fields within MediaCom and focuses on (1) providing?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qIA9Vfw6&k=Job&j=oCBv9fwB&__jvst=Employee+Referral&__jvsd=s9meJhwe&__jvsc=Twitter&bid=nlShOKwx'>WP Engine Careers - Business Intelligence, Developer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qIA9Vfw6&k=Job&j=oCBv9fwB&__jvst=Employee+Referral&__jvsd=s9meJhwe&__jvsc=Twitter&bid=nlShOKwx'>WP Engine Careers - Business Intelligence, Developer</a></h5> 
 <p><span class="badge badge-light">Austin</span></p>
 <p>Posted on:: 2019-07-19</p>
 <hr/>
@@ -359,7 +375,7 @@ reporting infrastructure and visualisation to the next level. BI touches every p
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Proprioo/743999691944096-business-intelligence-analyst-h-f-'>Proprioo Business intelligence analyst (H/F) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Proprioo/743999691944096-business-intelligence-analyst-h-f-'>Proprioo Business intelligence analyst (H/F) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
@@ -391,7 +407,7 @@ reporting infrastructure and visualisation to the next level. BI touches every p
 <p><span class="badge badge-light">Redwood City, CA</span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://zengistics.workable.com/j/7A5536A547'>Zengistics - Jobs: Business Intelligence Analyst - Apply online</a></h5> 
+<h5><a href='https://zengistics.workable.com/j/7A5536A547'>Zengistics - Jobs: Business Intelligence Analyst - Apply online</a></h5> 
 <p><span class="badge badge-light">Texas, United States</span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
@@ -437,7 +453,7 @@ We enjoy working on a product that helps millions of people find love and get a?
 <p><span class="badge badge-light">Singapore</span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/signifyd/d6a53616-5194-4531-b1f1-5148448942ed'>Signifyd - Business Intelligence Solutions Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/signifyd/d6a53616-5194-4531-b1f1-5148448942ed'>Signifyd - Business Intelligence Solutions Developer</a></h5> 
 <p><span class="badge badge-light">San Jose, California</span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
@@ -456,22 +472,6 @@ We enjoy working on a product that helps millions of people find love and get a?
 <h5><a href='https://boards.greenhouse.io/ocadotechnology/jobs/4355910002'>Job Application for Graduate Business Intelligence Analyst at Ocado</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
-<hr/>
-<h5><a href='https://hostinger.workable.com/j/0DC6BEDC84'>Hostinger - Jobs: Junior Business Intelligence Developer - Apply online</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-16</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/netent/jobs/1779046'>Job Application for Business Intelligence Analyst  at NetEnt</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-16</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/netent/jobs/1779104'>Job Application for Business Intelligence Qlik Sense Developer  at NetEnt</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-16</p>
-<hr/>
-<h5><a href='https://columbia.referrals.selectminds.com/jobs/business-intelligence-bi-engineer-7889'>Business Intelligence (BI) Engineer - Columbia Sportswear Company Careers</a></h5> 
-<p><span class="badge badge-light">United States, Oregon, Portland</span></p>
-<p>Posted on: 2019-07-16</p>
 <hr/>
 
 
